--- a/beanEnjoyer-npm/package.json
+++ b/beanEnjoyer-npm/package.json
@@ -2,7 +2,7 @@
   "name": "egzaminas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/beanEnjoyer-npm/",
+  "homepage": "/beanEnjoyer-war/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
